syntax = "proto3";
option java_package = "com.huyu.protobuf";
//源文件类名
option java_outer_classname = "PlayerRespProto";

message PlayerResp{
    int32 player_id =1;
    string player_name = 2;
    int32 status = 3;
    string scence_name = 4;
    int32 player_mp = 5;
    int32 player_hp = 6;
    int32 harm = 7;
}